--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "devDependencies": {
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
+    "localstorage": "^1.0.1",
     "mini-css-extract-plugin": "^2.7.2",
     "style-loader": "^3.3.1",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "local-storage": "^2.0.0"
   }
 }
